# ChangeLog for app-xemacs/text-modes
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/text-modes/ChangeLog,v 1.29 2011/07/22 11:25:00 xarthisius Exp $

*text-modes-2.01 (17 Jul 2013)

  17 Jul 2013; Mats Lidell <matsl@gentoo.org> +metadata.xml,
  +text-modes-2.01.ebuild:
  app-xemacs/text-modes: Upstream experimental version bump and use EAPI=5
