@@ -1,1 +1,2 @@
 DIST text-modes-2.01-pkg.tar.gz 450525 SHA256 4b1daf558bbe2f617ba8f9cc041c428823a7f0e2df455101eee3ee59ece5dd59 SHA512 b08f135aeeb50cefb1ded75661b99f9bed4ca31b57e1df24c0570390591dbde3f5ccea24b624b1b11d65680f9f5eada103a5cbe0237ce23269a0a2e0dd5b75fd WHIRLPOOL ecf4c94412039346b0297f0cdb0d06ecd3e0e13f85f6f9ebb0b85505aff03fd42f5132943035137004bdef91ce13913ac8051e98b3f75cdd71cce68d33cc7357
+DIST text-modes-2.05-pkg.tar.gz 544369 SHA256 22b572f964804f1efd92eb7d595a5ac55b9834c4100a673a2666e6a9e5bbd1fc SHA512 bb57458718a3f15df7752108a99ababe20a1ea1d6e64abaf89ab4689c17445941eb18031b2c0f8a04e014998f8bdc33e583808f5318f388c7662b4fda73e59a1 WHIRLPOOL deaa2cc1a2d7e9f7c6f7abd39dc218a965fd53883d09e50278d52463c28342b90bbfe5094c9282ad980d72b9118054a0c27c47306d3d9f0443309f4c5ec9f69d
