@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/text-modes
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/text-modes/ChangeLog,v 1.29 2011/07/22 11:25:00 xarthisius Exp $
+
+*text-modes-2.05 (08 Jul 2014)
+
+  08 Jul 2014; Mats Lidell <matsl@gentoo.org> +text-modes-2.05.ebuild:
+  Pre release version bump.
 
 *text-modes-2.01 (17 Jul 2013)
 
